# timidity

./: .cvsignore  AUTHORS  ChangeLog  INSTALL  INSTALL.ja  INSTALL.jp  Makefile.am  Makefile.in  NEWS  README  README.ja  README.jp  TiMidity-uj.ad  TiMidity-uj.ad.in  TiMidity.ad  TiMidity.ad.in  acinclude.m4  aclocal.m4  autogen.sh  bootstrap.sh  common.makefile.in  config.h  config.h.in  configure  configure.in  interface.h  interface.h.in  timidity.dsp  timidity.dsw  timidity.ide  timidity.mak
autoconf/: .cvsignore  Makefile.am  Makefile.boot  Makefile.in  alsa.m4  arts.m4  libOggFLAC.m4  ogg.m4  utils.m4  vorbis.m4
cfgforsf/: cfgforsf.dsp
configs/: Makefile.am  Makefile.in  msc-config.h  msc-config.h.in  msc-interface.h  msc-twsyn-interface.h  msc6-sjis.txt  msc7-sjis.txt
debian/: README.Debian  TODO  changelog  control  copyright  executable.files  rules  timidity-el.dirs  timidity-el.emacsen-install  timidity-el.emacsen-remove  timidity-el.emacsen-startup  timidity-interfaces-extra.install  timidity.cfg  timidity.default  timidity.dirs  timidity.docs  timidity.init  timidity.install  timidity.lintian  timidity.manpages  timidity.menu  timidity.mime  timidity.preinst  watch
doc/: Makefile.am  Makefile.in  m2m.txt
doc/C/: Makefile.am  Makefile.in  README.dl  README.mts  README.w32  README.xaw  timidity.1  timidity.cfg.5
doc/ja_JP.eucJP/: Makefile.am  Makefile.in  README.dl  README.tk  README.w32  timidity.1  timidity.cfg.5
doc/ja_JP.ujis/: Makefile.am  Makefile.in  README.dl  README.m2m  README.mts  timidity.1  timidity.cfg.5
interface/: Makefile.am  Makefile.in  TiMidity-uj.ad  TiMidity.ad  alsaseq_c.c  dumb_c.c  dynamic_c.c  emacs_c.c  gtk_c.c  gtk_i.c  interface.dsp  mac_c.c  mac_mag.c  mac_wrdwindow.c  motif_c.c  ncurs_c.c  npsyn_c.c  portmidisyn_c.c  rtsyn.h  rtsyn_common.c  rtsyn_npipe.c  rtsyn_portmidi.c  rtsyn_winmm.c  server_c.c  slang_c.c  soundspec.c  tclIndex  timidity.el  tk_c.c  tkmidity.ptcl  vt100_c.c  w32g.h  w32g_c.c  w32g_i.c  w32g_ini.c  w32g_playlist.c  w32g_pref.c  w32g_pref.h  w32g_res.h  w32g_res.rc  (+29 more)
interface/bitmaps/: Makefile.am  Makefile.in
interface/motif_bitmaps/: Makefile.am  Makefile.in
interface/pixmaps/: Makefile.am  Makefile.in
libarc/: Makefile.am  Makefile.in  arc.c  arc_mime.c  deflate.c  explode.c  libarc.dsp  libarc.dsw  unlzh.c  url.c  url_dir.c  url_file.c  url_ftp.c  url_http.c  url_news.c  url_newsgroup.c
libunimod/: Makefile.am  Makefile.in  libunimod.dsp  libunimod.dsw  load_far.c  load_it.c  load_mod.c  load_stm.c  load_xm.c  mloader.c  mlutil.c  unimod.h  unimod_priv.h
nouse/: nouse.dsp
script/: Makefile.am  Makefile.in  lspatch.pl  readme.txt  unix2dos.sh  wcc386_w.sh  wpp386_w.sh
timidity/: Makefile.am  Makefile.in  aRts_a.c  aiff_a.c  alsa_a.c  ao_a.c  aq.c  au_a.c  audriv_al.c  audriv_mme.c  audriv_none.c  calcnewt.c  common.c  common.h  controls.c  controls.h  darwin_a.c  effect.c  esd_a.c  flac_a.c  freq.c  gogo_a.c  gogo_a.h  instrum.c  instrum.h  jack_a.c  list_a.c  loadtab.c  m2m.c  mac_a.c  mac_dlog.c  mac_main.c  mac_qt_a.c  mac_soundspec.c  mfi.c  midi_a.c  miditrace.c  miditrace.h  mix.c  mix.h  (+48 more)
timw32g/: timw32g.dsp
timw32gd/: timw32gd.dsp
twsyng/: twsyng.dsp
utils/: Makefile.am  Makefile.in  getopt.c  getopt.h  mac_util.c  mblock.c  net.c  nkflib.c  readdir_win.c  strtab.c  support.c  support.h  tmdy_getopt.h  utils.dsp
windrv/: Makefile.am  Makefile.in  dlldata.c  oemsetup.inf  timiditydrv.c  timiditydrv.cpp  timiditydrv.def  timiditydrv.h  timiditydrv.i  timiditydrv.idl  timiditydrv.inf  timiditydrv_i.c  timiditydrv_p.c  timiwp_timidity.c  timiwp_timidity.h
